# Paru_Gui

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  corrigir_projeto.sh  main.py  meson.build  org.gnome.Example.json  org.gnome.painel_paru.json  org.gnome.paru-gui.json  pyproject.toml  run_output.txt  window.py  window.ui
.github/workflows/: main.yml  rust-arch.yml
data/: gschemas.compiled  meson.build  org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in  org.gnome.painel_paru.desktop.in  org.gnome.painel_paru.gresource.xml  org.gnome.painel_paru.gschema.xml  org.gnome.painel_paru.metainfo.xml.in  org.gnome.painel_paru.service.in  org.gnome.paru-gui.desktop.in  org.gnome.paru-gui.gschema.xml  org.gnome.paru-gui.metainfo.xml.in  org.gnome.paru-gui.service.in  painel_paru.gresource.xml
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  aur_downloader.py  build_manager.py  config.rs  conflict_resolver.py  file_utils.py  history_manager.py  main.py  main.rs  meson.build  painel_paru.gresource.xml  painel_paru.in  painel_paru.py  paru-gui.gresource.xml  paru_gui.gresource.xml  paru_gui.in  paru_runner.py  pkgbuild_analyzer.py  preferences.py  sandboxing.py  security_analyzer.py  shortcuts-dialog.ui  terminal.py  tour_guide.py  window.py  window.rs  window.ui
src/gear/: __init__.py  chroot_manager.rs  error_handler.py  error_handler.rs  file_utils.py  file_utils.rs  history_manager.rs  lazy_cache_manager.rs  main.py  mod.rs  paru_stats_manager.rs  pkgbuild_analyzer.py  pkgbuild_analyzer.rs  preferences_manager.py  preferences_manager.rs  repo_manager.rs  sandboxing.rs  security_analyzer.rs  signature_verifier.py  signature_verifier.rs  terminal_manager.rs  tour_guide.py  tour_guide.rs  upstream_checker.rs
src/gtk/: initial_screen.ui
src/gtk/conflict_resolver/: conflict_dialog.ui
src/gtk/content_detection/: empty_card.ui  packages_card.ui  patches_card.ui  pkgbuild_card.ui
src/gtk/preferences/: debug_preferences.ui  devel_preferences.ui  general_preferences.ui
src/painel_paru/: __init__.py  action_manager.py  aur_downloader.py  build_manager.py  conflict_resolver.py  content_detector.py  handlers.py  main.py  menu_manager.py  navigation.py  painel_paru.py  paru_runner.py  preferences.py  preferences_manager.py  terminal.py  terminal_manager.py  ui_builder.py  utils.py  window.py  window_aur.py  window_build.py  window_conflicts.py  window_content.py  window_core.py  window_handlers.py  window_notifications.py  window_patches.py  window_preferences.py  window_signatures.py  window_ui.py
src/painel_paru/handlers/: __init__.py  aur_handlers.py  build_handlers.py  package_handlers.py  system_handlers.py  ui_handlers.py
src/paru_gui/: __init__.py  error_handler.py  file_utils.py  history_manager.py  lazy_cache_manager.py  main.py  preferences_manager.py  sandboxing.py  security_analyzer.py  terminal_manager.py  upstream_checker.py  window.py
src/ui/: __init__.py  image_fixes.css  style.css
src/ui/components/: Keyboard_Shortcuts.ui  __init__.py  command_assistant.py  empty_state.py  empty_state.ui  error_dialog.py  error_dialog.ui  file_chooser_dialog.py  file_chooser_dialog.ui  help-overlay.ui  help_overlay.py  search_bar.py  search_bar.ui
src/ui/components/cards/: advanced_card.ui  package_card.ui  patch_card.ui  pkgbuild_card.ui
src/ui/dialogs/: __init__.py  advanced_mode_dialog.ui  aur_specific_dialog.ui  chroot_manager_dialog.ui  command_builder_widget.ui  command_confirmation_dialog.ui  conflict_resolver.py  empty_directory_dialog.ui  live_progress_dialog.ui  news_viewer_dialog.ui  operation_result_dialog.ui  orphan_manager_dialog.ui  package_build_dialog.ui  package_install_dialog.ui  package_remove_dialog.ui  package_search_advanced_dialog.ui  patch_card_template.ui  pkgbuild_builder.py  pkgbuild_downloader_dialog.ui  preferences_dialog.ui  repo_manager_dialog.ui  system_stats_dialog.ui  system_upgrade_dialog.ui
src/ui/managers/: __init__.py  action_handlers.py  action_handlers.rs  content_view_manager.py  content_view_manager.rs  file_operations.py  file_operations.rs  mod.rs  preferences_dialog_manager.py  preferences_dialog_manager.rs  search_manager.py  search_manager.rs  ui_manager.py  ui_manager.rs
src/ui/menus/: main_file_context_menu.ui  primary_menu.ui
src/ui/screens/: __init__.py  content_view.py  content_view.ui  pkgbuild-review.css  pkgbuild_review.ui  pkgbuild_review_dialog.py  upstream_checker.py  upstream_update.py  upstream_update.ui  welcome_screen.py  welcome_screen.ui
