[package]
name = "paru-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8", package = "gtk4", features = ["gnome_46"] }
regex = "1"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
similar = { version = "2.4", features = ["inline"] }
dirs = "5.0"
which = "6.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
shlex = "1.3"
scraper = "0.18"
md5 = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
url = "2.5"
urlencoding = "2.1"

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 0
debug = false

[build-dependencies]
glib-build-tools = "0.20"

[dependencies.adw]
package = "libadwaita"
version = "0.6"
features = ["v1_5"]
