application_id = 'org.gnome.painel_paru'

# Instala ícone escalável
install_data(
  'hicolor/scalable/apps/@0@.svg'.format(application_id),
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
)

# Instala ícone simbólico
install_data(
  'hicolor/symbolic/apps/@0@-symbolic.svg'.format(application_id),
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'symbolic' / 'apps'
)
